--- a/task/alert-usage-mem.yaml
+++ b/task/alert-usage-mem.yaml
@@ -10,7 +10,7 @@ spec:
     typeRef: cluster
     variables:
         cluster: "default"
-        usage: "80"
+        usage: "85"
         notifaction: "https://xz.wps.cn/api/v1/webhook/send?key="
     steps:
         - name: alert-usage-mem
@@ -50,16 +50,30 @@ spec:
                   except subprocess.CalledProcessError as e:
                       print(f"Error fetching hosts: {e.stderr}")
                       return None
+              def get_schedulable_nodes():
+                  cmd = ["kubectl", "get", "nodes", "-o", "json"]
+                  result = subprocess.run(cmd, stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)
+                  if result.returncode != 0:
+                      print(f"Error fetching nodes: {result.stderr}")
+                      return []
+                  nodes = json.loads(result.stdout)
+                  schedulable_nodes = []
+                  for item in nodes.get("items", []):
+                      if item.get("spec", {}).get("unschedulable", False) == False:
+                          schedulable_nodes.append(item["metadata"]["name"])
+                  return schedulable_nodes
               def check_mem_usage(hosts):
                   global error_message
+                  schedulable_nodes = get_schedulable_nodes()
                   for item in hosts.get("items", []):
                       status = item.get("status", {})
                       hostname = status.get("hostname")
                       mem_usage_percent = status.get("memUsagePercent")
-                      mem_usage_percent = mem_usage_percent.strip('%').split('.')[0]
-                      usage_percentage = int(mem_usage_percent)
+                      usage_percentage = mem_usage_percent.split("%")[0].split(".")[0]
+                      usage_percentage = int(usage_percentage)
                       if usage_percentage > usage_threshold:
-                          error_message += f"Hostname: {hostname}, Usage: {mem_usage_percent}\n"
+                          if hostname in schedulable_nodes:
+                              error_message += f"Nodename: {hostname}, Usage: {mem_usage_percent}\n"
               try:
                   hosts = get_hosts()
                   if hosts:
