--- a/task/get-pod-error-logs-bysvc.yaml
+++ b/task/get-pod-error-logs-bysvc.yaml
@@ -11,4 +11,4 @@ spec:
     topk: "50"
   steps:
     - name: get pod topk error logs by svc name
-      content: kubectl get svc --all-namespaces | grep ${svc} | awk '{print $1}' | xargs -L1 kubectl logs -l app=${svc} --tail=${topk} -n | grep -iE 'err|warn'
+      content: kubectl get svc --all-namespaces | grep ${svc} | awk '{print $1}' | xargs -L1 kubectl logs -l app=${svc} --tail=${topk} -n | grep -iE 'err|warn' | exit 0
