--- a/task/get-pod-logs-byname.yaml
+++ b/task/get-pod-logs-byname.yaml
@@ -11,4 +11,4 @@ spec:
     topk: "20"
   steps:
     - name: get pod topk logs
-      content: kubectl get pod --all-namespaces | grep ${podname} | awk '{print $1, $2}' | xargs -L1 kubectl logs --tail=${topk} -n
+      content: kubectl get pod --all-namespaces | grep ${podname} | awk '{print $1, $2}' | xargs -L1 kubectl logs --tail=${topk} -n | exit 0
