--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -60,6 +60,32 @@ rules:
 - apiGroups:
   - crd.chenshaowen.com
   resources:
+  - pipelineruns
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - crd.chenshaowen.com
+  resources:
+  - pipelineruns/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - crd.chenshaowen.com
+  resources:
+  - pipelineruns/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - crd.chenshaowen.com
+  resources:
   - pipelines
   verbs:
   - create
