--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - bases/crd.chenshaowen.com_clusters.yaml
 - bases/crd.chenshaowen.com_taskruns.yaml
 - bases/crd.chenshaowen.com_pipelines.yaml
+- bases/crd.chenshaowen.com_pipelineruns.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -17,6 +18,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_clusters.yaml
 #- patches/webhook_in_taskruns.yaml
 #- patches/webhook_in_pipelines.yaml
+#- patches/webhook_in_pipelineruns.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -26,6 +28,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_clusters.yaml
 #- patches/cainjection_in_taskruns.yaml
 #- patches/cainjection_in_pipelines.yaml
+#- patches/cainjection_in_pipelineruns.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
