add pipelines examples

--- a/pipelines/cluster-clear-disk.yaml
+++ b/pipelines/cluster-clear-disk.yaml
@@ -1,24 +1,21 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Pipeline
 metadata:
-  name: cordon-node
+  name: cluster-clear-disk
   namespace: ops-system
 spec:
-  desc: 禁用集群节点
+  desc: 清理集群中某个节点的磁盘
   variables:
-    nodeName:
-      value: "anymaster"
-      required: true
     typeRef:
       value: "cluster"
       required: true
     nameRef:
       required: true
-    node:
-      required: true
+    nodeName:
       regex: "\b[a-zA-Z-]*node[a-zA-Z-]*\b"
+      required: true
   tasks:
     - name: 检查节点是否存在
       taskRef: check-node-existed
-    - name: 禁用节点
-      taskRef: cordon-node
+    - name: 清理磁盘
+      taskRef: clear-disk
