--- a/pipelines/cluster-uncordon-node.yaml
+++ b/pipelines/cluster-uncordon-node.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Pipeline
 metadata:
-  name: uncordon-node
+  name: cluster-uncordon-node
   namespace: ops-system
 spec:
-  desc: 恢复集群节点
+  desc: 恢复集群中的某一个节点
   variables:
     nodeName:
       value: "anymaster"
