rename pipeline field

--- a/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
@@ -73,7 +73,7 @@ spec:
                       items:
                         type: string
                       type: array
-                    regx:
+                    regex:
                       type: string
                     required:
                       type: boolean
