--- a/tasks/alert-gpu-drop.yaml
+++ b/tasks/alert-gpu-drop.yaml
@@ -4,7 +4,7 @@ metadata:
     name: alert-gpu-drop
     namespace: ops-system
 spec:
-    desc: use task `alert-gpu-drop-py` to check gpu drop in specified host
+    desc: use task `alert-gpu-drop` to check gpu drop in specified host
     crontab: "*/10 * * * *"
     selector:
         alert-gpu-drop: enabled
