--- a/tasks/alert-label-gpu.yaml
+++ b/tasks/alert-label-gpu.yaml
@@ -19,8 +19,10 @@ spec:
                   if echo "$node_status" | grep -q "SchedulingDisabled"; then
                       kubectl -n ops-system label host $host alert-gpu-drop=disabled --overwrite
                       kubectl -n ops-system label host $host alert-gpu-zombie=disabled --overwrite
+                      kubectl -n ops-system label host $host alert-gpu-ecc=disabled --overwrite
                   else
                       kubectl -n ops-system label host $host alert-gpu-drop=enabled --overwrite
                       kubectl -n ops-system label host $host alert-gpu-zombie=enabled --overwrite
+                      kubectl -n ops-system label host $host alert-gpu-ecc=enabled --overwrite
                   fi
               done
