--- a/tasks/alert-gpu-ecc.yaml
+++ b/tasks/alert-gpu-ecc.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: ops-system
 spec:
     desc: use task `alert-gpu-ecc` to check gpu drop in specified host
-    crontab: "* */2 * * *"
+    crontab: "13 */2 * * *"
     selector:
         alert-gpu-ecc: enabled
     typeRef: host
