--- a/tasks/add-secret-imagepull.yaml
+++ b/tasks/add-secret-imagepull.yaml
@@ -5,14 +5,14 @@ metadata:
   namespace: ops-system
 spec:
   desc: use task `add-secret-imagepull` to create a secret for image pulling in the specified namespace within a Kubernetes cluster.
-  nodename: anymaster
+  nodeName: anymaster
   variables:
     secret_server: ""
     secret_username: ""
     secret_password: ""
     secret_name: mysecret
     secret_namespace: ops-system
-    clear: false
+    clear: "false"
   steps:
     - name: Create Pull Image Secret
       content: kubectl create secret docker-registry ${secret_name} --docker-server=${secret_server} --docker-username=${secret_username} --docker-password=${secret_password} -n ${secret_namespace}
