--- a/tasks/install-descheduler.yaml
+++ b/tasks/install-descheduler.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: use task `install-descheduler` to install descheduler in Kubernetes 
-  nodename: anymaster
+  nodeName: anymaster
   variables:
     proxy: https://mirror.ghproxy.com/
     action: apply
