--- a/tasks/list-reqlimit.yaml
+++ b/tasks/list-reqlimit.yaml
@@ -7,7 +7,7 @@ spec:
   desc: use task `list-reqlimit` to list request and limit in cluster, variables must to set `namespace`
   nodeName: anymaster
   variables:
-    namespace: "all"
+    namespace: ""
   steps:
     - name: list cpu request limit
       content: kubectl get pod -n ${namespace} -o custom-columns='NAMESPACE:.metadata.namespace,POD-NAME:.metadata.name,CPU-REQ:.spec.containers[*].resources.requests.cpu,CPU-LIMIT:.spec.containers[*].resources.limits.cpu'
